fix: divider overlaps the text when the background is transparent

--- a/frontend/elements/src/components/divider/styles.sass
+++ b/frontend/elements/src/components/divider/styles.sass
@@ -17,12 +17,10 @@
   font: inherit
 
   width: 100%
-  text-align: center
-  line-height: .1em
-  margin: 0 auto
 
-  .text
-    font: inherit
-    color: inherit
-    background: variables.$background-color
-    padding: variables.$divider-padding
+.text
+  font: inherit
+  color: inherit
+  background: variables.$background-color
+  padding: variables.$divider-padding
+  line-height: .1em
